--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,16 +19,16 @@
         <a href="/">Inicio</a>
       </li>
       <li>
-        <a href="/about.html">About</a>
+        <a href="/about.html">Acerca de Tienda Valely</a>
       </li>
       <li>
         <a href="/blog.html">Blog</a>
       </li>
       <li>
-        <a href="/team.html">Team</a>
+        <a href="/team.html">Nuestro Equipo</a>
       </li>
       <li>
-        <a href="/contact.html"><span>Contact</span></a>
+        <a href="/contact.html"><span>Contacto</span></a>
       </li>
     </ul>         
   </div>
