--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
         <a href="/">Inicio</a>
       </li>
       <li>
-        <a href="/about.html">Acerca de Tienda Valely</a>
+        <a href="/about.html">Acerca de nosotros</a>
       </li>
       <li>
         <a href="/blog.html">Blog</a>
