--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -71,8 +71,8 @@
         <div class="container">
             <div class="row">
                 <div class="services-header">
-                    <h3 class="services-header-title">Our Mission</h3>
-                    <p class="services-header-body"><em> Things we provide in Office </em>  </p><hr>
+                    <h3 class="services-header-title">Dile adiós al “no tengo que ponerme”</h3>
+                    <p class="services-header-body"><em> Elige sabiamente, elígenos. </em>  </p><hr>
                 </div>
             </div>
       
