--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -82,7 +82,7 @@
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
                         <h4 class="services-title">Vestidos</h4>
-                        <p class="services-body">Suele asociarse mucho el “éxito” en los negocios con el vestido, e incluso se ha acuñado la frase “vestirse para el éxito”</p>
+                        <p class="services-body">Se asocia el "éxito con los vestidos, se ha acuñado la frase “vestirse para el éxito”</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
