--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -90,8 +90,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
-                        <h4 class="services-title">Apple</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Camisas</h4>
+                        <p class="services-body">Clasicos del vestuario, esenciales para tu armario y clasicos de vestuario temporal</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>
                 </div>
@@ -99,8 +99,8 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
-                        <h4 class="services-title">EASY TO USE</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
+                        <h4 class="services-title">Pantalones y Pantalones cortos</h4>
+                        <p class="services-body">el modo de vida estadounidense, más relajado y más feliz.</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
                     </div>        
                 </div>
