--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,8 +12,8 @@
         </p>
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-external-link"></i> Links</h3>
-        <p><a href="/about"> About ( Who we are )</a></p>
+        <h3><i class="fa fa-external-link"></i> Formas de pago</h3>
+        <p><a href="/about"> PayPal</a></p>
         <p><a href="/about"> Services ( What we do )</a></p>
         <p><a href="/contact"> Contact ( Feel free to contact )</a></p>
         <p><a href="/blog"> Blog ( Write to us )</a></p>
