--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,13 +14,13 @@
       <div class="col-md-4">
         <h3><i class="fa fa-external-link"></i> Formas de pago</h3>
         <p><a href="/about"> PayPal</a></p>
-        <p><a href="/about"> Services ( What we do )</a></p>
-        <p><a href="/contact"> Contact ( Feel free to contact )</a></p>
-        <p><a href="/blog"> Blog ( Write to us )</a></p>
-        <p><a href="/team"> Team ( Meet the Team )</a></p> 
+        <p><a href="/about"> VISA</a></p>
+        <p><a href="/contact"> mastercard</a></p>
+        <p><a href="/blog"> OXXO</a></p>
+        <p><a href="/team"> kueskiPay</a></p> 
       </div>
       <div class="col-md-4">
-        <h3><i class="fa fa-heart"></i> Socialize</h3>
+        <h3><i class="fa fa-heart"></i> Redes Sociales</h3>
         <div id="social-icons">
           {% if site.googleplus_link %}
             <a href="{{ site.googleplus_link }}" class="btn-group google-plus">
