--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,13 @@
         <a href="/">Inicio</a>
       </li>
       <li>
-        <a href="/about.html">Acerca de nosotros</a>
+        <a href="/about.html">Nosotros</a>
       </li>
       <li>
         <a href="/blog.html">Blog</a>
       </li>
       <li>
-        <a href="/team.html">Nuestro Equipo</a>
+        <a href="/team.html">Equipo</a>
       </li>
       <li>
         <a href="/contact.html"><span>Contacto</span></a>
