--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -80,7 +80,7 @@
             <div class="row services-row services-row-head services-row-1">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-phone fa-5x"></span></p>
+                        <p class="services-icon"><span class="fa fa-image fa-5x"></span></p>
                         <h4 class="services-title">Vestidos</h4>
                         <p class="services-body">Se asocia el "éxito con los vestidos, se ha acuñado la frase “vestirse para el éxito”</p>
                         <p class="services-more"><a href="#">Find Out More</a></p>
