--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -80,10 +80,10 @@
             <div class="row services-row services-row-head services-row-1">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa- fa-5x"></span></p>
+                        <p class="services-icon"><i class="fa fa- fa-5x"></span></p>
                         <h4 class="services-title">Vestidos</h4>
                         <p class="services-body">Se asocia el "éxito con los vestidos, se ha acuñado la frase “vestirse para el éxito”</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
         
@@ -92,7 +92,7 @@
                         <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
                         <h4 class="services-title">Camisas</h4>
                         <p class="services-body">Clasicos del vestuario, esenciales para tu armario y clasicos de vestuario temporal</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
         
@@ -101,7 +101,7 @@
                         <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
                         <h4 class="services-title">Pantalones y Pantalones cortos</h4>
                         <p class="services-body">el modo de vida estadounidense, más relajado y más feliz.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>        
                 </div>
             </div>
@@ -111,28 +111,19 @@
             <div class="row services-row services-row-tail services-row-2">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
-                        <h4 class="services-title">Windows</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
-                        <h4 class="services-title">RETINA READY</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
-                        <h4 class="services-title">Cubic</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        
                     </div>
                 </div>
             </div>
