--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -111,7 +111,10 @@
             <div class="row services-row services-row-tail services-row-2">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        
+                    <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
+                        <h4 class="services-title">Pantalones y Pantalones cortos</h4>
+                        <p class="services-body">el modo de vida estadounidense, más relajado y más feliz.</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>    
                     </div>
                 </div>
         
