--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -80,28 +80,28 @@
             <div class="row services-row services-row-head services-row-1">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-android fa-5x"></span></p>
-                        <h4 class="services-title">Android</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-icon"><span class="fa fa- fa-5x"></span></p>
+                        <h4 class="services-title">Vestidos</h4>
+                        <p class="services-body">Se asocia el "exito" con los vestidos, se ha acuñado la frase "vestirse para el exito"</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-apple fa-5x"></i></p>
-                        <h4 class="services-title">Apple</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
+                        <h4 class="services-title">Camisas</h4>
+                        <p class="services-body">Clasicos del vestuario, esenciales para tu armario y clasicos de vestuario temporal.</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-thumbs-o-up fa-5x"></i></p>
-                        <h4 class="services-title">EASY TO USE</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-icon"><i class="fa fa--o-up fa-5x"></i></p>
+                        <h4 class="services-title">Pantalones y Pantalones cortos</h4>
+                        <p class="services-body">El modo de vida estadounidense, mas relajado y mas feliz.</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>        
                 </div>
             </div>
