--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -111,28 +111,28 @@
             <div class="row services-row services-row-tail services-row-2">
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
-                        <p class="services-icon"><span class="fa fa-windows fa-5x"></span></p>
-                        <h4 class="services-title">Windows</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-icon"><span class="fa fa- fa-5x"></span></p>
+                        <h4 class="services-title">sudaderas</h4>
+                        <p class="services-body">Prenda versatil, se utiliza para practicar deportes, prenda casual, confeccionada con algodon.</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-eye fa-5x"></i></p>
-                        <h4 class="services-title">RETINA READY</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
+                        <h4 class="services-title">Faldas</h4>
+                        <p class="services-body">Prenda que estiliza las piernas y comoda de llevar.</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
         
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInRight" data-wow-offset="40">
-                        <p class="services-icon"><i class="fa fa-cube fa-5x"></i></p>
-                        <h4 class="services-title">Cubic</h4>
-                        <p class="services-body">Cras interdum placerat libero vel tempor. Curabitur gravida iaculis erat quis dignissim.</p>
-                        <p class="services-more"><a href="#">Find Out More</a></p>
+                        <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
+                        <h4 class="services-title">Ropa Deportiva</h4>
+                        <p class="services-body">Prenda para realizar ejercicio muy comodo, relajado suave.</p>
+                        <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
             </div>
