--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -122,7 +122,7 @@
                     <div class="services-group wow animated zoomIn" data-wow-offset="40">
                         <p class="services-icon"><i class="fa fa- fa-5x"></i></p>
                         <h4 class="services-title">Faldas</h4>
-                        <p class="services-body">Prenda que estiliza las piernas y comoda de llevar.</p>
+                        <p class="services-body">Prenda que estiliza las piernas, amponas o ajustadas y comoda de llevar.</p>
                         <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
                 </div>
