--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -26,7 +26,7 @@
                             <img src="../assets/img/slider/Vogue Ropa.jpg" height="400" alt="Image of first carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">Office BOOTSTRAP TEMPLATE</h3>
-                                <p class="carousel-body">RESPONSIVE \ MULTI PAGE</p>
+                                <p class="carousel-body">LIBRE \ CASUAL</p>
                             </div>
                         </div>
                         <!-- End Slide 1 -->
@@ -36,7 +36,7 @@
                             <img src="../assets/img/slider/Guci.jpg" height="400" alt="Image of second carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">EASY TO CUSTOMIZE</h3>
-                                <p class="carousel-body">BEAUTIFUL \ CLEAN \ MINIMAL</p>
+                                <p class="carousel-body">HERMOSO \ LIMPIO \ ESTILO</p>
                             </div>
                         </div>
                         <!-- End Slide 2 -->
@@ -46,7 +46,7 @@
                             <img src="../assets/img/slider/Ropa Dior N.jpg" height="400" alt="Image of third carousel">
                             <div class="carousel-caption">
                                 <h3 class="carousel-title hidden-xs">MULTI-PURPOSE TEMPLATE</h3>
-                                <p class="carousel-body">PORTFOLIO \ CORPORATE \ CREATIVE</p>
+                                <p class="carousel-body">ALEGRE \ MODA \ CREATIVO</p>
                             </div>
                         </div>
                         <!-- End Slide 3 -->
