--- a/_layouts/home_style.html
+++ b/_layouts/home_style.html
@@ -112,7 +112,7 @@
                 <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12">
                     <div class="services-group wow animated fadeInLeft" data-wow-offset="40">
                         <p class="services-icon"><span class="fa fa- fa-5x"></span></p>
-                        <h4 class="services-title">sudaderas</h4>
+                        <h4 class="services-title">Sudaderas</h4>
                         <p class="services-body">Prenda versatil, se utiliza para practicar deportes, prenda casual, confeccionada con algodon.</p>
                         <p class="services-more"><a href="#">Saber más</a></p>
                     </div>
